// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip Rendering renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#97A4AB",
        "borderRadius": 20,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 7,
        "paddingVertical": 5,
      },
    ]
  }
  testID="chip"
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "textAlign": "left",
        },
      ]
    }
    testID="chip-label"
  >
    Care
  </Text>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 6,
        "left": 6,
        "right": 6,
        "top": 6,
      }
    }
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "paddingLeft": 7,
      }
    }
    testID="chip-close-button"
  >
    <Image
      source="test-file-stub"
      style={
        Array [
          Object {
            "height": 16,
            "width": 16,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Chip Rendering should use passed color as background color 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#4499ff",
        "borderRadius": 20,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 7,
        "paddingVertical": 5,
      },
    ]
  }
  testID="chip"
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "textAlign": "left",
        },
      ]
    }
    testID="chip-label"
  >
    Care
  </Text>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 6,
        "left": 6,
        "right": 6,
        "top": 6,
      }
    }
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "paddingLeft": 7,
      }
    }
    testID="chip-close-button"
  >
    <Image
      source="test-file-stub"
      style={
        Array [
          Object {
            "height": 16,
            "width": 16,
          },
        ]
      }
    />
  </View>
</View>
`;
